# arkworks_dapp_icp

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/arkworks_icp24_backend/: Cargo.toml  arkworks_icp24_backend.did
src/arkworks_icp24_backend/src/: lib.rs
src/arkworks_icp24_frontend/assets/: main.css
src/arkworks_icp24_frontend/src/: index.html  index.js
src/arkworks_icp24_frontend/src/rust_zkp/: cargo.toml
src/arkworks_icp24_frontend/src/rust_zkp/src/: lib.rs
