[package]
name = "arkworks_icp24_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.3.0"
ark-relations = "0.3.0"
ark-std = "0.4.0"
ark-ff = "0.3.0"
ark-bn254 = "0.3.0"
ark-serialize = "^0.3.0"
once_cell = "1.8.0"
